parser.output
Gramática

    0 $accept: programa $end

    1 programa: RPROG TID bloke TSEMIC

    2 bloke: TLBRACE sententzia_zerrenda TRBRACE

    3 sententzia_zerrenda: %empty
    4                    | sententzia_zerrenda sententzia TSEMIC

    5 sententzia: TID TASSIG adierazpena

    6 adierazpena: adierazpena TMUL adierazpena
    7            | adierazpena TSUM adierazpena
    8            | adierazpena TRES adierazpena
    9            | adierazpena TDIV adierazpena
   10            | adierazpena TBIG adierazpena
   11            | adierazpena TBIGQ adierazpena
   12            | adierazpena TLOW adierazpena
   13            | adierazpena TLOWQ adierazpena
   14            | adierazpena TEQL adierazpena
   15            | adierazpena TNEQL adierazpena
   16            | TID
   17            | TINTEGER
   18            | TFLOAT


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TID <izena> (258) 1 5 16
    TINTEGER <izena> (259) 17
    TFLOAT <izena> (260) 18
    TLBRACE (261) 2
    TRBRACE (262) 2
    TSEMIC (263) 1 4
    TMUL (264) 6
    TASSIG (265) 5
    RPROG (266) 1
    TSUM (267) 7
    TRES (268) 8
    TDIV (269) 9
    TBIG (270) 10
    TBIGQ (271) 11
    TLOW (272) 12
    TLOWQ (273) 13
    TEQL (274) 14
    TNEQL (275) 15


No terminales con las reglas donde aparecen

    $accept (21)
        on left: 0
    programa (22)
        on left: 1
        on right: 0
    bloke <izena> (23)
        on left: 2
        on right: 1
    sententzia_zerrenda <izena> (24)
        on left: 3 4
        on right: 2 4
    sententzia <izena> (25)
        on left: 5
        on right: 4
    adierazpena <izena> (26)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 5 6 7 8 9 10 11 12 13 14 15


Estado 0

    0 $accept: • programa $end
    1 programa: • RPROG TID bloke TSEMIC

    RPROG  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: RPROG • TID bloke TSEMIC

    TID  desplazar e ir al estado 3


Estado 2

    0 $accept: programa • $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: RPROG TID • bloke TSEMIC
    2 bloke: • TLBRACE sententzia_zerrenda TRBRACE

    TLBRACE  desplazar e ir al estado 5

    bloke  ir al estado 6


Estado 4

    0 $accept: programa $end •

    $default  aceptar


Estado 5

    2 bloke: TLBRACE • sententzia_zerrenda TRBRACE
    3 sententzia_zerrenda: • %empty
    4                    | • sententzia_zerrenda sententzia TSEMIC

    $default  reduce usando la regla 3 (sententzia_zerrenda)

    sententzia_zerrenda  ir al estado 7


Estado 6

    1 programa: RPROG TID bloke • TSEMIC

    TSEMIC  desplazar e ir al estado 8


Estado 7

    2 bloke: TLBRACE sententzia_zerrenda • TRBRACE
    4 sententzia_zerrenda: sententzia_zerrenda • sententzia TSEMIC
    5 sententzia: • TID TASSIG adierazpena

    TID      desplazar e ir al estado 9
    TRBRACE  desplazar e ir al estado 10

    sententzia  ir al estado 11


Estado 8

    1 programa: RPROG TID bloke TSEMIC •

    $default  reduce usando la regla 1 (programa)


Estado 9

    5 sententzia: TID • TASSIG adierazpena

    TASSIG  desplazar e ir al estado 12


Estado 10

    2 bloke: TLBRACE sententzia_zerrenda TRBRACE •

    $default  reduce usando la regla 2 (bloke)


Estado 11

    4 sententzia_zerrenda: sententzia_zerrenda sententzia • TSEMIC

    TSEMIC  desplazar e ir al estado 13


Estado 12

    5 sententzia: TID TASSIG • adierazpena
    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 17


Estado 13

    4 sententzia_zerrenda: sententzia_zerrenda sententzia TSEMIC •

    $default  reduce usando la regla 4 (sententzia_zerrenda)


Estado 14

   16 adierazpena: TID •

    $default  reduce usando la regla 16 (adierazpena)


Estado 15

   17 adierazpena: TINTEGER •

    $default  reduce usando la regla 17 (adierazpena)


Estado 16

   18 adierazpena: TFLOAT •

    $default  reduce usando la regla 18 (adierazpena)


Estado 17

    5 sententzia: TID TASSIG adierazpena •  [TSEMIC]
    6 adierazpena: adierazpena • TMUL adierazpena
    7            | adierazpena • TSUM adierazpena
    8            | adierazpena • TRES adierazpena
    9            | adierazpena • TDIV adierazpena
   10            | adierazpena • TBIG adierazpena
   11            | adierazpena • TBIGQ adierazpena
   12            | adierazpena • TLOW adierazpena
   13            | adierazpena • TLOWQ adierazpena
   14            | adierazpena • TEQL adierazpena
   15            | adierazpena • TNEQL adierazpena

    TMUL   desplazar e ir al estado 18
    TSUM   desplazar e ir al estado 19
    TRES   desplazar e ir al estado 20
    TDIV   desplazar e ir al estado 21
    TBIG   desplazar e ir al estado 22
    TBIGQ  desplazar e ir al estado 23
    TLOW   desplazar e ir al estado 24
    TLOWQ  desplazar e ir al estado 25
    TEQL   desplazar e ir al estado 26
    TNEQL  desplazar e ir al estado 27

    $default  reduce usando la regla 5 (sententzia)


Estado 18

    6 adierazpena: • adierazpena TMUL adierazpena
    6            | adierazpena TMUL • adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 28


Estado 19

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    7            | adierazpena TSUM • adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 29


Estado 20

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    8            | adierazpena TRES • adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 30


Estado 21

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
    9            | adierazpena TDIV • adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 31


Estado 22

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   10            | adierazpena TBIG • adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 32


Estado 23

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   11            | adierazpena TBIGQ • adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 33


Estado 24

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   12            | adierazpena TLOW • adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 34


Estado 25

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   13            | adierazpena TLOWQ • adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 35


Estado 26

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   14            | adierazpena TEQL • adierazpena
   15            | • adierazpena TNEQL adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 36


Estado 27

    6 adierazpena: • adierazpena TMUL adierazpena
    7            | • adierazpena TSUM adierazpena
    8            | • adierazpena TRES adierazpena
    9            | • adierazpena TDIV adierazpena
   10            | • adierazpena TBIG adierazpena
   11            | • adierazpena TBIGQ adierazpena
   12            | • adierazpena TLOW adierazpena
   13            | • adierazpena TLOWQ adierazpena
   14            | • adierazpena TEQL adierazpena
   15            | • adierazpena TNEQL adierazpena
   15            | adierazpena TNEQL • adierazpena
   16            | • TID
   17            | • TINTEGER
   18            | • TFLOAT

    TID       desplazar e ir al estado 14
    TINTEGER  desplazar e ir al estado 15
    TFLOAT    desplazar e ir al estado 16

    adierazpena  ir al estado 37


Estado 28

    6 adierazpena: adierazpena • TMUL adierazpena
    6            | adierazpena TMUL adierazpena •  [TSEMIC, TMUL, TSUM, TRES, TDIV, TBIG, TBIGQ, TLOW, TLOWQ, TEQL, TNEQL]
    7            | adierazpena • TSUM adierazpena
    8            | adierazpena • TRES adierazpena
    9            | adierazpena • TDIV adierazpena
   10            | adierazpena • TBIG adierazpena
   11            | adierazpena • TBIGQ adierazpena
   12            | adierazpena • TLOW adierazpena
   13            | adierazpena • TLOWQ adierazpena
   14            | adierazpena • TEQL adierazpena
   15            | adierazpena • TNEQL adierazpena

    $default  reduce usando la regla 6 (adierazpena)

    Conflict between rule 6 and token TMUL resolved as reduce (%left TMUL).
    Conflict between rule 6 and token TSUM resolved as reduce (TSUM < TMUL).
    Conflict between rule 6 and token TRES resolved as reduce (TRES < TMUL).
    Conflict between rule 6 and token TDIV resolved as reduce (%left TDIV).
    Conflict between rule 6 and token TBIG resolved as reduce (TBIG < TMUL).
    Conflict between rule 6 and token TBIGQ resolved as reduce (TBIGQ < TMUL).
    Conflict between rule 6 and token TLOW resolved as reduce (TLOW < TMUL).
    Conflict between rule 6 and token TLOWQ resolved as reduce (TLOWQ < TMUL).
    Conflict between rule 6 and token TEQL resolved as reduce (TEQL < TMUL).
    Conflict between rule 6 and token TNEQL resolved as reduce (TNEQL < TMUL).


Estado 29

    6 adierazpena: adierazpena • TMUL adierazpena
    7            | adierazpena • TSUM adierazpena
    7            | adierazpena TSUM adierazpena •  [TSEMIC, TSUM, TRES, TBIG, TBIGQ, TLOW, TLOWQ, TEQL, TNEQL]
    8            | adierazpena • TRES adierazpena
    9            | adierazpena • TDIV adierazpena
   10            | adierazpena • TBIG adierazpena
   11            | adierazpena • TBIGQ adierazpena
   12            | adierazpena • TLOW adierazpena
   13            | adierazpena • TLOWQ adierazpena
   14            | adierazpena • TEQL adierazpena
   15            | adierazpena • TNEQL adierazpena

    TMUL  desplazar e ir al estado 18
    TDIV  desplazar e ir al estado 21

    $default  reduce usando la regla 7 (adierazpena)

    Conflict between rule 7 and token TMUL resolved as shift (TSUM < TMUL).
    Conflict between rule 7 and token TSUM resolved as reduce (%left TSUM).
    Conflict between rule 7 and token TRES resolved as reduce (%left TRES).
    Conflict between rule 7 and token TDIV resolved as shift (TSUM < TDIV).
    Conflict between rule 7 and token TBIG resolved as reduce (TBIG < TSUM).
    Conflict between rule 7 and token TBIGQ resolved as reduce (TBIGQ < TSUM).
    Conflict between rule 7 and token TLOW resolved as reduce (TLOW < TSUM).
    Conflict between rule 7 and token TLOWQ resolved as reduce (TLOWQ < TSUM).
    Conflict between rule 7 and token TEQL resolved as reduce (TEQL < TSUM).
    Conflict between rule 7 and token TNEQL resolved as reduce (TNEQL < TSUM).


Estado 30

    6 adierazpena: adierazpena • TMUL adierazpena
    7            | adierazpena • TSUM adierazpena
    8            | adierazpena • TRES adierazpena
    8            | adierazpena TRES adierazpena •  [TSEMIC, TSUM, TRES, TBIG, TBIGQ, TLOW, TLOWQ, TEQL, TNEQL]
    9            | adierazpena • TDIV adierazpena
   10            | adierazpena • TBIG adierazpena
   11            | adierazpena • TBIGQ adierazpena
   12            | adierazpena • TLOW adierazpena
   13            | adierazpena • TLOWQ adierazpena
   14            | adierazpena • TEQL adierazpena
   15            | adierazpena • TNEQL adierazpena

    TMUL  desplazar e ir al estado 18
    TDIV  desplazar e ir al estado 21

    $default  reduce usando la regla 8 (adierazpena)
